--- a/Mobile/src/main/res/menu/main.xml
+++ b/Mobile/src/main/res/menu/main.xml
@@ -3,7 +3,7 @@
     tools:context="org.aisillinois.mobile.MainActivity" >
     <item android:id="@+id/action_example"
         android:title="@string/action_example"
-        android:showAsAction="withText|ifRoom" />
+        android:showAsAction="never" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
